--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                             </div>
                             <!--Image-->
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
@@ -64,7 +64,7 @@
                         <div class= 'container off'>
                             <!--Image-->
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
@@ -93,7 +93,7 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/RPCA.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
@@ -104,7 +104,7 @@
                         <div class= 'container off'>
                             <div class="container_content_img">
                                 <video width="100%" autoplay loop>
-                                    <source style="margin:auto;" src="media/mp4/AAO.mp4" type="video/mp4">
+                                    <source src="media/mp4/AAO.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                       
                             </div>
@@ -131,7 +131,7 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/tetris.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                            
@@ -141,7 +141,7 @@
                     <li class="snap">
                         <div class= 'container off'>
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/pong.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                    
@@ -169,7 +169,7 @@
                                 </div>
                             </div>
                             <div class="container_content_img">
-                                <video style="margin:auto;" width="100%" autoplay loop>
+                                <video width="100%" autoplay loop>
                                     <source src="media/mp4/snake.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                     
