--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <!--Image-->
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/connecdinghome.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -63,7 +63,7 @@
                         <!--Individual containers within each scroll snap element with transition style classes-->
                         <div class= 'container off'>
                             <!--Image-->
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/connecdingapp.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -92,7 +92,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/RPCA.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -102,7 +102,7 @@
                     </li>
                     <li class="snap">
                         <div class= 'container off'>
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/AAO.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -130,7 +130,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/tetris.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -140,7 +140,7 @@
                     </li>
                     <li class="snap">
                         <div class= 'container off'>
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/pong.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
@@ -168,7 +168,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="container_content_img">
+                            <div class="container_content_mp4">
                                 <video width="100%" autoplay loop>
                                     <source src="media/mp4/snake.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
