--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
                         <div class= 'container off'>
                             <!--Image-->
                             <div class="container_content_img">
-                                <img src='media/img/australia.jpg'  alt="" class="container_img"/>
+                                <img src='media/img/misc/australia.jpg'  alt="" class="container_img"/>
                             </div>
                             <div class="container_content_description">
                                 <!--Title with text-->
