--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,7 @@
                                 <h1 class = "title">Young</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top left is me playing piano at Merkin Hall and the picture on the bottom left is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
                                     </p>
                                 </div>
                             </div>
