--- a/profile.html
+++ b/profile.html
@@ -94,13 +94,12 @@
                     <li class="snap">
                         <div class= 'container off'>
                             <div class="container_content_img">
-                                <img src='media/img/piano.jpg'  alt="" class="container_img" width="50"/>
                                 <img src='media/img/theatre.jpg'  alt="" class="container_img" width="50"/>                              </div>
                             <div class="container_content_description">
                                 <h1 class = "title">Young</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top left is me playing piano at Merkin Hall and the picture on the bottom left is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the left is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
                                     </p>
                                 </div>
                             </div>
