--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,9 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
+                                        <div class="hide_scrollbar">
+                                            Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
+                                        </div>
                                     </p>
                                 </div>
                             </div>
