--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div>
                 <!--Headings for website-->
                 <h5 class = "center">
-                    <a class = index href="/">Juston Park</a>
+                    <a class = index href="/">Justin Park</a>
                 </h5>
                 <h2 class = "center">
                     parkaxp@bc.edu|201-663-2139
