--- a/profile.html
+++ b/profile.html
@@ -45,13 +45,13 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a senior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
+                                        Welcome to my Website! My name is Justin Park and feel free to learn more about me while you look around!
                                     </p>
                                 </div>
                             </div>
                             <!--Image-->
                             <div class="container_content_img">
-                                <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img" style="z-index=1"/>
+                                <img src='media/img/BC_Selfie.jpg'  alt="" class="container_img" style="z-index:1"/>
                             </div>
                         </div>
                     </li>
@@ -65,10 +65,10 @@
                             </div>
                             <div class="container_content_description">
                                 <!--Title with text-->
-                                <h1 class = "title">Computer Science Background</h1>
+                                <h1 class = "title">Full-Stack Developer</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        I started my Computer Science study in my Freshman year of college in 2019. I started with some simple coding games such as Tetris, however, that interest quickly shifted to Website/App Development. Specifically, I am skilled in many Front-end frameworks and languages, which I have implemented throughout my internships detailed in <a style="text-decoration:underline; color: white;" href="projects.html">Projects</a>. I am also seeking to expand my expertise to Software Engineering aswell, leading to my most recent position at GMFinancial. I look forward to continue accelerating my career while learning the many different clusters within Computer Science!
+                                        I began my Computer Science journey as a freshman in Boston College. I started with coding simple games such as Tetris, and that interest only grew with to Website/App Development. Although my preference will always be to work with Front-end frameworks and languages, I do actively seek to broaden my skillsets as a Full-Stack developer. I look forward to continued acceleration of my career while learning the many different clusters within Computer Science! Please check out my <a style="text-decoration:underline; color: white;" href="projects.html">Projects</a>!
                                     </p>
                                 </div>
                             </div>
@@ -78,47 +78,11 @@
                         <div class= 'container'>
                             <div class="container_content_description">
                                 <div class="hide_title">
-                                    <h1 class = "title">Hobbies</h1>
-                                </div>                               
-                                <div class="hide_p">     
-                                    <p class="p">
-                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
-                                    </p>
+                                    <h1 class = "title">My Dogs!</h1>
+                                </div>                           
+                                <div class="container_content_img">
+                                    <img src='media/img/jamieari.jpg'  alt="" class="container_img" style="z-index:1"/>
                                 </div>
-                            </div>
-                            <div class="container_content_img">
-                                <img src='media/img/aerok.jpg'  alt="" class="container_img" style="z-index=1"/>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="snap">
-                        <div class= 'container off'>
-                            <div class="container_content_img">
-                                <img src='media/img/theatre.jpg'  alt="" class="container_img" width="50"/>                              </div>
-                            <div class="container_content_description">
-                                <h1 class = "title">Young</h1>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the left is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="snap">
-                        <div class= 'container'>
-                            <div class="container_content_description">
-                                <div class="hide_title">
-                                    <h1 class = "title">Dogs</h1>
-                                </div>                               
-                                <div class="hide_p">     
-                                    <p class="p">
-                                        Enjoy a picture of my dogs! 
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="container_content_img">
-                                <img src='media/img/jamieari.jpg'  alt="" class="container_img" style="z-index=1"/>
                             </div>
                         </div>
                     </li>
