--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,91 @@
                     <!--First element within scroll snap-->
                     <li class="snap">
                         <!--Individual containers within each scroll snap element with transition style classes-->
+                        <div class= 'container off'>
+                            <!--Image-->
+                            <div class="container_content_mp4">
+                                <video width="100%" autoplay loop muted>
+                                    <source src="media/mp4/DataGarden.mp4" type="video/mp4">
+                                    Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                                </video>                            
+                            </div>
+                            <div class="container_content_description">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">DataGarden</h1>
+                                </div>                               
+                                <div class="hide_p">     
+                                    <p class="p">
+                                        <b>Research (9.1.2022,5.1.2023)-</b>
+                                        <div class="p">This VR application was developed to compare 3D to 2D data visualizations. The application was programmed in JavaScript and Babylon.js to visually represent 200+ students with 14 variables such as Year, Personality, Major, Stress, etc. and features such as interactive sorting and dynamic movement.</div>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
+                    <li class="snap">
+                        <!--Individual containers within each scroll snap element with transition style classes-->
+                        <div class= 'container'>
+                            <div class="container_content_description">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">BunBreakdown</h1>
+                                </div>                               
+                                <div class="hide_p">     
+                                    <p class="p">
+                                        <b>Project (11.14.2022,12.1.2022)-</b>
+                                        <div class="p">This short and sweet mini-terminal game was created as a project for my Object Oriented Design Class. It is written in java and boasts 4 of the many design patterns that we learned in class.</div>
+                                        <div class="p">Play the game yourself: <a href="https://github.com/JustinPark845/Bun-Breakdown" style="color:white">github</a></div>
+                                        <div class="p">Or read the design patterns used: <a href="https://docs.google.com/document/d/1G9DEoOK4FqzjQTmWkxdzpH3osJHhtlYjIdGH9LmDYdA/edit?usp=sharing" style="color:white">Google Docs</a></div>
+                                    </p>
+                                </div>
+                            </div>
+                            <!--Image-->
+                            <div class="container_content_mp4">
+                                <video width="100%" autoplay loop muted>
+                                    <source src="media/mp4/Bun-Breakdown.mp4" type="video/mp4">
+                                    Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
+                                </video>                            
+                            </div>
+                        </div>
+                    </li>                        
+                    <li class="snap">
+                        <div class= 'container off'>
+                            <div class="container_content_description">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title"><nobr>Facial Photoshop Detection</nobr></h1>
+                                </div>                               
+                                <div class="hide_p">     
+                                    <p class="p">
+                                        <b>Project (11.1.2022,12.1.2022)-</b>
+                                        <div class="p">This Computer Vision project aimed towards identifying traces of Photoshop on a facial photo. Two of the key features worked on was identifying facial warping using a heat map, and object injection using a mask.</div>
+                                        <div>Read more about its results here: <a href="https://docs.google.com/document/d/1ZPoT0ylB_XL8-NLDoI9a6amg6z0dtNWd1hQBpugz1HU/edit" style="color:white">Google Docs</a></div>
+                                    </p>
+                                </div>
+                                <div class="container_content_img" style="margin-left: auto; margin-right: auto;">
+                                    <img src='media/img/FacialDetection.jpg'  alt="" class="container_img" style="z-index:1"/>
+                                </div>
+                            </div>
+                            <div class="container_content_description">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">Reddit Stock Sentiment</h1>
+                                </div>                               
+                                <div class="hide_p">     
+                                    <p class="p">
+                                        <b>Project (11.1.2022,12.1.2022)-</b>
+                                        <div class="p">This NLP project aimed towards predicting a stocks' performance based on the sentiment of its previous days' reddit posts. It ran each post through existing sentiment analysis models/algorithms such as BERT, Naive Bayes, KNeighbors, etc. and through an MLP on the resulting data array.</div>
+                                    </p>
+                                </div>
+                                <div class="container_content_img" style="margin-left: auto; margin-right: auto;">
+                                    <img src='media/img/RedditSentiment.jpg'  alt="" class="container_img" style="z-index:1"/>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="snap">
                         <div class= 'container'>
                             <div class="container_content_description">
                                 <!--Title with text-->
@@ -45,7 +130,9 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)-</b> I was given the task of creating a homepage for our social media startup so I took the liberty to make it fun by continuously introducing new images to the screen and implementing smooth transitions. This project taught me a lot about web hosting and the market for domain names using GoDaddy and Cpanel. This project required HTML, CSS, and JavaScript. Check it out yourself! -> <a href="https://connecding.com/aboutus/" style="color:white">https://connecding.com/aboutus/</a>
+                                        <b>Startup (6.1.2021,12.31.2021)-</b>
+                                        <div class="p">This social media startup informational homepage was implemented using more complex css transitions to create smooth UI effects. The project utilizes HTML, CSS, and JavaScript, and used GoDaddy for domain names and Cpanel for hosting.</div>
+                                        <div class="p">Check it out yourself: <a href="https://connecding.com/aboutus/" style="color:white">https://connecding.com/aboutus/</a></div>
                                     </p>
                                 </div>
                             </div>
@@ -58,9 +145,7 @@
                             </div>
                         </div>
                     </li>
-                    <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
                     <li class="snap">
-                        <!--Individual containers within each scroll snap element with transition style classes-->
                         <div class= 'container off'>
                             <!--Image-->
                             <div class="container_content_mp4">
@@ -74,7 +159,8 @@
                                 <h1 class = "title">ConnecD!ng App</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Startup (6.1.2021,12.31.2021)- </b> One of the largest projects that I have ever picked up, the goal of this program was to replicate many of the messaging, posting, commenting, and liking functions that many established social medias already offer while also organizing the user's existing social media accounts. The program made use of SQL (originally firebase) API to fetch and retrieve conversation and post content and utilized HTML, CSS, JavaScript for the visual and linking functionalities.
+                                        <b>Startup (6.1.2021,12.31.2021)- </b>
+                                        <div class="p">This social media startup web-browser project was created to consolidate the messaging, posting, commenting, and liking functions of many established social medias applications. The program utilized SQL (originally firebase) API to fetch and retrieve content and HTML, CSS, JavaScript for linking functionalities.</div>
                                     </p>
                                 </div>
                             </div>
@@ -88,7 +174,8 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> This program was created using HTML, CSS, and JavaScript on React Native. The challenge for this program was trying to organize the plethora of pages in organized files as most of the project was filled with (word) content rather than shorter, rigorous programming algorithms. It still necessitated an easy-to-follow format which resulted in the demo seen on the right.
+                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b>
+                                        <div class="p">tablet application was created to aid interventionists in integrating Bantu and Bhutanese refugees with the American culture and norms by providing an easy-to-follow curriculum. This program was created using HTML, CSS, and JavaScript on React Native.</div>
                                     </p>
                                 </div>
                             </div>
@@ -112,7 +199,8 @@
                                 <h1 class = "title">AAO</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- </b>Built during my first full time internship at AAO, the program utilized HTML, CSS, JavaScript, Python, Flask, and sqlite3 to store and retrieve inventory data easily with intuitive GUI. It came with extra features such as color indicators for low stock, a history of who added/deleted from which account, among the flexibility of being able to add many other locations.</b>
+                                        <b>Internship (5.24.2021,8.27.2021)- </b>
+                                        <div class="p">This application is an inventory tracking application written during my first full time internship at AAO. It utilized HTML, CSS, JavaScript, Python, Flask, and sqlite3 to store and retrieve inventory data, and came with extra features such as inputs to update values, color stock-level indicators, and account management.</div>
                                     </p>
                                 </div>
                             </div>
@@ -126,7 +214,8 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        <b>Personal Project/Prototype (2.2.2021,2.25.2021)-</b>Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris. 
+                                        <b>Project (2.2.2021,2.25.2021)-</b>
+                                        <div class="p">This project is a replica/prototype of the modern version of tetris. The game utilized the python libraries "turtle" and "keyboard" for the GUI and keyboard inputs respectively. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions. This project was inspired by my friend Noah Yim.</div>
                                     </p>
                                 </div>
                             </div>
@@ -150,7 +239,8 @@
                                 <h1 class = "title">Pong</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project (1.20.2021,2.2.2021)- </b>Preceded the tetris program, this is one of the programs I coded as part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle AI, which follows the ball at a delayed speed.
+                                        <b>Project (1.20.2021,2.2.2021)</b>
+                                        <div class="p">This application is a simple Pong game game created using the python libraries "turtle" and "keyboard" for the GUI and keyboard inputs respectively. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle CPU, which follows the ball at a delayed speed.</div>
                                     </p>
                                 </div>
                             </div>
@@ -164,7 +254,8 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        <b>Personal Project (1.5.2021,1.17.2021)- </b>The very first interative Python program I created as a part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python, has basic directional inputs, and a bonus file reader which saves high scores.
+                                        <b>Project (1.5.2021,1.17.2021)</b>
+                                        <div class="p">My very first Python program, this project implements GUI "turtle" and keyboard listener "keyboard" within Python, has basic directional inputs, and a bonus file reader which saves high scores.</div>
                                     </p>
                                 </div>
                             </div>
@@ -182,7 +273,7 @@
                                 <h1 class = "title">Website</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project/Prototype (4.16.2021,2.25.2021)-</b>The webpage that you are looking at right now is my first project in HTML, CSS, (although not) JavaScript project. It uses the languages stated before, most of which was learned from viewing necessary portions of Harvard's cs50 class.
+                                        <b class="p">Project (4.16.2021,2.25.2021)-</b>The website that you are looking at right now is my first project in HTML, CSS, JavaScript project, which I learned from Harvards' online cs50.
                                     </p>
                                 </div>
                             </div>
