--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
                                 <div class="hide_title">
                                     <h1 class = "title">My Dogs!</h1>
                                 </div>                           
-                                <div class="container_content_img">
+                                <div class="container_content_img" style="margin-left: auto; margin-right: auto;">
                                     <img src='media/img/jamieari.jpg'  alt="" class="container_img" style="z-index:1"/>
                                 </div>
                             </div>
