--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,6 @@
                                     <p class="p">
                                         <b>Startup (6.1.2021,12.31.2021)-</b>
                                         <div class="p">This social media startup informational homepage was implemented using more complex css transitions to create smooth UI effects. The project utilizes HTML, CSS, and JavaScript, and used GoDaddy for domain names and Cpanel for hosting.</div>
-                                        <div class="p">Check it out yourself: <a href="https://connecding.com/aboutus/" style="color:white">https://connecding.com/aboutus/</a></div>
                                     </p>
                                 </div>
                             </div>
@@ -215,7 +214,7 @@
                                 <div class="hide_p">     
                                     <p class="p">
                                         <b>Project (2.2.2021,2.25.2021)-</b>
-                                        <div class="p">This project is a replica/prototype of the modern version of tetris. The game utilized the python libraries "turtle" and "keyboard" for the GUI and keyboard inputs respectively. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions. This project was inspired by my friend Noah Yim.</div>
+                                        <div class="p">This project is a replica/prototype of the modern version of tetris. The game utilized the python libraries "turtle" and "keyboard" for the GUI and keyboard inputs respectively. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions.</div>
                                     </p>
                                 </div>
                             </div>
@@ -264,18 +263,6 @@
                                     <source src="media/mp4/snake.mp4" type="video/mp4">
                                     Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                                 </video>                     
-                            </div>
-                        </div>
-                    </li>
-                    <li class="snap">
-                        <div class= 'container off'>
-                            <div class="container_content_description">
-                                <h1 class = "title">Website</h1>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        <b class="p">Project (4.16.2021,2.25.2021)-</b>The website that you are looking at right now is my first project in HTML, CSS, JavaScript project, which I learned from Harvards' online cs50.
-                                    </p>
-                                </div>
                             </div>
                         </div>
                     </li>
