--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
                                 </div>                               
                                 <div class="hide_p">     
                                     <p class="p">
-                                        Welcome to my Website! My name is Justin Park and feel free to learn more about me while you look around!
+                                        Welcome to my Website! My name is Justin Park, and I am currently an associate software engineer working at Capital One! My role involves working on data pipelines and transformation in AWS, but I also have a breadth of experiences in many other facets of Computer Science!
                                     </p>
                                 </div>
                             </div>
@@ -68,7 +68,7 @@
                                 <h1 class = "title">Full-Stack Developer</h1>
                                 <div class="hide_p">
                                     <p class="p">
-                                        I began my Computer Science journey as a freshman in Boston College. I started with coding simple games such as Tetris, and that interest only grew with to Website/App Development. Although my preference will always be to work with Front-end frameworks and languages, I do actively seek to broaden my skillsets as a Full-Stack developer. I look forward to continued acceleration of my career while learning the many different clusters within Computer Science! Please check out my <a style="text-decoration:underline; color: white;" href="projects.html">Projects</a>!
+                                        I began my Computer Science journey as a freshman at Boston College. I started with coding simple games like Tetris, but my passion soon enough lead me to gather experiences in full-stack development, cloud computing, and automation, with a dedication to building scalable and efficient solutions! Please check out my <a style="text-decoration:underline; color: white;" href="projects.html"> Personal Projects</a>!
                                     </p>
                                 </div>
                             </div>
